components/security/oauth2-proxy/oauth2-proxy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-auth-forward
  namespace: authentik
spec:
  forwardAuth:
    address: "https://oauth2-proxy.${auth_domain}/oauth2/"
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
      - Authorization
      - Set-Cookie
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: oauth2-proxy.${auth_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  name: http
